--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Latihan GIT - Web UBSI</title>
 </head>
 <body>
-    <p>Alhamdulillah latihan pertama GIT untuk matakuliah Web Pro 2 berhasil.</p>
+    <h3>Data Mahasiswa</h3>
+    <ul>
+       <li>Muhammad Yusuf Alkaf : 12200447</li> 
+    </ul>
 </body>
 </html>
